<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

    >
<EditText
    android:id="@+id/building_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/building_title_hint"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textAlignment="center"/>

<EditText
        android:id="@+id/building_description"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:hint="@string/description_title_hint"
        android:layout_below="@id/building_title"
        android:textSize="16sp"
        android:textAlignment="center"
        android:background="@drawable/edit_text_style"

    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/building_details_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/building_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"/>
        />
    <CheckBox
        android:id="@+id/building_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/building_solved_label"
        android:textSize="10sp"
        android:layout_marginTop="10dp"/>


    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/building_call"
            android:layout_marginLeft="16dp"
            android:text="@string/building_suspect_text"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/building_report"
            android:layout_marginRight="16dp"
            android:text="@string/building_report_text"
            android:layout_weight="1"
            />

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            >

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                android:id="@+id/building_camera"

                />
    </LinearLayout>




</LinearLayout>