<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_building_price"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.quseva.ekaterina.po.pv115.ibmt.bsu.buildinginspection.BuildingPrice">
<TextView
    android:id="@+id/title_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/building_text_price"
    android:textSize="18sp"
    android:textStyle="bold"
    android:textAlignment="center"
    android:layout_marginLeft="40dp"
    android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/building_title_price"
        android:layout_below="@id/title_price"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_style"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/building_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/height_et"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_marginLeft="65dp"
            android:background="@drawable/edit_text_style"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/building_zd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/height_zd"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_marginLeft="58dp"
            android:background="@drawable/edit_text_style"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/building_ob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/height_ob"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_text_style"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/building_etag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/height_etag"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_marginLeft="55dp"
            android:background="@drawable/edit_text_style"
            android:padding="5dp"/>
    </LinearLayout>

    <Spinner
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:entries="@array/masOfBuild"
        />
    <Spinner
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:entries="@array/masOfNaznach"
        />
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/btn_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_style"
        android:text="Рассчитать стоимость обследования"
        />
</LinearLayout>
